--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TDD demo scripts",
   "main": "index.js",
   "scripts": {
-    "test": "mocha src/**/**.spec.js"
+    "test": "mocha src/**/**.spec.js",
+    "watch": "mocha --watch src/**/**.spec.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,12 @@
   "author": "dragan.bencic@infobip.com",
   "license": "ISC",
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.2.0"
+    "chai": "latest",
+    "mocha": "latest"
+  },
+  "dependencies": {
+    "prompt": "^1.0.0",
+    "readline-sync": "^1.4.10",
+    "save": "^2.4.0"
   }
 }
